--- a/liverpool.html
+++ b/liverpool.html
@@ -92,7 +92,7 @@
         <h1>Liverpool FC</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="#history">History of Liverpool</a></li>
                 <li><a href="#achievements">Trophies of Liverpool</a></li>
             </ul>
