--- a/mancity.html
+++ b/mancity.html
@@ -92,7 +92,7 @@
         <h1>Manchester City FC</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="#history">History of Manchester City</a></li>
                 <li><a href="#achievements">Trophies of Manchester City</a></li>
             </ul>
