--- a/pr.html
+++ b/pr.html
@@ -106,7 +106,7 @@
         <h1>Pyramids FC</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="#history">History of Pyramids FC</a></li>
                 <li><a href="#achievements">Trophies of Pyramids FC</a></li>
             </ul>
