--- a/manun.html
+++ b/manun.html
@@ -102,7 +102,7 @@
         <h1>Manchester United</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="#history">History of Manchester United</a></li>
                 <li><a href="#achievements">Trophies of Manchester United</a></li>
             </ul>
