--- a/psg.html
+++ b/psg.html
@@ -118,7 +118,7 @@
         <h1>Paris Saint-Germain</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="#history">History of PSG</a></li>
                 <li><a href="#achievements">Trophies of PSG</a></li>
             </ul>
