--- a/real_madrid.html
+++ b/real_madrid.html
@@ -92,7 +92,7 @@
         <h1>Real Madrid</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="#history">History of Real Madrid</a></li>
                 <li><a href="#achievements">Trophies of Real Madrid</a></li>
             </ul>
