--- a/tot.html
+++ b/tot.html
@@ -95,7 +95,7 @@
         <h1>Tottenham Hotspur FC</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="#history">History of Tottenham</a></li>
                 <li><a href="#achievements">Tottenham Achievements</a></li>
             </ul>
