--- a/zamalek.html
+++ b/zamalek.html
@@ -107,7 +107,7 @@
         <h1>Zamalek SC</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="#history">History of Zamalek</a></li>
                 <li><a href="#achievements">Trophies of Zamalek</a></li>
             </ul>
