--- a/index.html
+++ b/index.html
@@ -4,38 +4,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign In</title>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4405581336011742"
-     crossorigin="anonymous"></script>
   <style>
-    h1 {
-      font-size: 500%;
-      margin-top: 0%;
-    }
     body {
       font-family: Arial, sans-serif;
       background: linear-gradient(to right, #00c6ff, #0072ff);
       text-align: center;
-      margin-top: 50px;
       padding: 0;
+      margin: 0;
       height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
     form {
-      background-color: rgba(255, 255, 255, 0.444);
-      padding: 60px;
-      border-radius: 30px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-      display: inline-block;
-      width: 90%;
+      background-color: rgba(255, 255, 255, 0.9);
+      padding: 30px;
+      border-radius: 20px;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+      width: 100%;
       max-width: 400px;
-      margin-top: 100px;
     }
     input, button {
       display: block;
       margin: 15px auto;
-      padding: 12px;
-      width: 80%;
+      padding: 10px;
+      width: 90%;
       border-radius: 8px;
-      border: 1px solid #ceadad;
+      border: 1px solid #ccc;
       font-size: 16px;
     }
     button {
@@ -43,71 +38,41 @@
       color: white;
       border: none;
       cursor: pointer;
-      font-size: 18px;
     }
     button:hover {
       background-color: #248e12;
     }
-    p {
-      margin-top: 10px;
+    .message {
       font-size: 14px;
-    }
-    a {
-      color: #007BFF;
-      text-decoration: none;
+      margin-top: 10px;
     }
     .error {
       color: red;
-      margin-top: 10px;
-      font-weight: bold;
     }
-    #toast {
-      visibility: hidden;
-      min-width: 250px;
-      margin-left: -125px;
-      background-color: #4CAF50;
-      color: white;
-      text-align: center;
-      border-radius: 2px;
-      padding: 16px;
-      position: fixed;
-      z-index: 1;
-      left: 50%;
-      bottom: 30px;
-      font-size: 17px;
-      box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
+    .success {
+      color: green;
     }
-    #toast.show {
-      visibility: visible;
-      animation: fadein 0.5s, fadeout 0.5s 2.5s;
-    }
-    @keyframes fadein {
-      from {bottom: 0; opacity: 0;}
-      to {bottom: 30px; opacity: 1;}
-    }
-    @keyframes fadeout {
-      from {bottom: 30px; opacity: 1;}
-      to {bottom: 0; opacity: 0;}
+    a {
+      color: #007bff;
+      text-decoration: none;
     }
   </style>
 </head>
 <body>
-  <form id="signinForm">
-    <h1 style="color: white;">Sign In</h1>
-    <input type="email" id="email" placeholder="Enter Email" required>
-    <input type="password" id="password" placeholder="Enter Password" required>
+  <form id="signInForm">
+    <h2>Sign In</h2>
+    <input type="email" id="signInEmail" placeholder="Enter your email" required>
+    <input type="password" id="signInPassword" placeholder="Enter your password" required>
     <button type="submit">Sign In</button>
-    <p class="error" id="error"></p>
+    <p class="message" id="message"></p>
     <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
   </form>
 
-  <div id="toast">Sign In successful! Redirecting to Home.</div>
-
-  <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-storage-compat.js"></script>
-
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js"></script>
   <script>
+    // Firebase Configuration
     const firebaseConfig = {
       apiKey: "AIzaSyDKRADtZ9fa2pyvXIw5oXFf7ttNFje80A8",
       authDomain: "ahmed-99129.firebaseapp.com",
@@ -115,33 +80,40 @@
       storageBucket: "ahmed-99129.appspot.com",
       messagingSenderId: "113829270298",
       appId: "1:113829270298:web:0dc3b3a84d94566e8792a3",
-      measurementId: "G-YGW2QVQ32C"
     };
+    const app = firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
 
-    const firebaseApp = firebase.initializeApp(firebaseConfig);
-    const auth = firebaseApp.auth();
-    const signinForm = document.getElementById("signinForm");
-    const errorElement = document.getElementById("error");
-    const toast = document.getElementById("toast");
-
-    signinForm.addEventListener("submit", (e) => {
+    // Sign In
+    document.getElementById('signInForm').addEventListener('submit', (e) => {
       e.preventDefault();
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
+      const email = document.getElementById('signInEmail').value;
+      const password = document.getElementById('signInPassword').value;
+      const message = document.getElementById('message');
 
       auth.signInWithEmailAndPassword(email, password)
-        .then(() => {
-          toast.className = "show";
-          setTimeout(() => {
-            toast.className = toast.className.replace("show", "");
-            window.location.href = "home.html";
-          }, 3000);
+        .then((userCredential) => {
+          const user = userCredential.user;
+
+          if (!user.emailVerified) {
+            message.textContent = "Please verify your email before logging in.";
+            message.className = "message error";
+            auth.signOut();
+          } else {
+            message.textContent = "Login successful!";
+            message.className = "message success";
+            setTimeout(() => {
+              window.location.href = "home.html";
+            }, 2000);
+          }
         })
         .catch((error) => {
-          errorElement.textContent = error.message;
+          message.textContent = error.message;
+          message.className = "message error";
         });
     });
   </script>
 </body>
 </html>
+
 
