--- a/signup.html
+++ b/signup.html
@@ -5,109 +5,116 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign Up</title>
   <style>
+    /* اضافة التنسيقات التي تم تحديدها من قبل */
     body {
       font-family: Arial, sans-serif;
       background: linear-gradient(to right, #00c6ff, #0072ff);
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      text-align: center;
+      margin-top: 50px;
+      padding: 0;
       height: 100vh;
-      margin: 0;
     }
     form {
-      background-color: rgba(255, 255, 255, 0.9);
-      padding: 30px;
-      border-radius: 20px;
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-      width: 100%;
+      background-color: rgba(255, 255, 255, 0.8);
+      padding: 60px;
+      border-radius: 30px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+      display: inline-block;
+      width: 90%;
       max-width: 400px;
-      text-align: center;
+      margin-top: 100px;
     }
     input, button {
       display: block;
       margin: 15px auto;
-      padding: 10px;
-      width: 90%;
+      padding: 12px;
+      width: 80%;
       border-radius: 8px;
-      border: 1px solid #ccc;
+      border: 1px solid #ceadad;
       font-size: 16px;
     }
     button {
-      background-color: #007bff;
+      background-color: #28a745;
       color: white;
       border: none;
       cursor: pointer;
+      font-size: 18px;
     }
     button:hover {
-      background-color: #0056b3;
+      background-color: #248e12;
     }
-    .message {
-      font-size: 14px;
+    p {
       margin-top: 10px;
+      font-size: 14px;
+    }
+    a {
+      color: #007BFF;
+      text-decoration: none;
     }
     .error {
       color: red;
-    }
-    a {
-      color: #28a745;
-      text-decoration: none;
+      margin-top: 10px;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
   <form id="signUpForm">
-    <h2>Sign Up</h2>
-    <input type="email" id="email" placeholder="Enter your email" required>
-    <input type="password" id="password" placeholder="Enter your password" required>
+    <h1 style="color: white;">Sign Up</h1>
+    <input type="email" id="email" placeholder="Enter Email" required>
+    <input type="password" id="password" placeholder="Enter Password" required>
     <button type="submit">Sign Up</button>
-    <p class="message" id="message"></p>
+    <p class="error" id="error"></p>
     <p>Already have an account? <a href="index.html">Sign In</a></p>
   </form>
 
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js"></script>
-  <script>
-    // Firebase Configuration
-    const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_AUTH_DOMAIN",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_STORAGE_BUCKET",
-      messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-      appId: "YOUR_APP_ID"
-    };
-    const app = firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
 
-    // Sign Up
+  <script>
+    // إعداد Firebase
+    const firebaseConfig = {
+      apiKey: "AIzaSyDKRADtZ9fa2pyvXIw5oXFf7ttNFje80A8",
+      authDomain: "ahmed-99129.firebaseapp.com",
+      projectId: "ahmed-99129",
+      storageBucket: "ahmed-99129.appspot.com",
+      messagingSenderId: "113829270298",
+      appId: "1:113829270298:web:0dc3b3a84d94566e8792a3",
+      measurementId: "G-YGW2QVQ32C"
+    };
+    const firebaseApp = firebase.initializeApp(firebaseConfig);
+
+// تهيئة Firestore و Authentication
+const db = firebaseApp.firestore();  // Firestore
+const auth = firebaseApp.auth();  // Firebase Authentication
+
+    // التسجيل عبر Firebase
     document.getElementById('signUpForm').addEventListener('submit', (e) => {
       e.preventDefault();
       const email = document.getElementById('email').value;
       const password = document.getElementById('password').value;
-      const message = document.getElementById('message');
 
-      auth.createUserWithEmailAndPassword(email, password)
+      // التحقق من البريد الإلكتروني وكلمة المرور في Firebase
+      firebase.auth().createUserWithEmailAndPassword(email, password)
         .then((userCredential) => {
           const user = userCredential.user;
 
-          user.sendEmailVerification()
-            .then(() => {
-              message.textContent = "Account created! Please verify your email.";
-              message.className = "message success";
-              auth.signOut();
-              setTimeout(() => {
-                window.location.href = "index.html";
-              }, 2000);
-            })
-            .catch((error) => {
-              message.textContent = error.message;
-              message.className = "message error";
-            });
+          // تخزين البيانات في Firebase Realtime Database
+          firebase.database().ref('users/' + user.uid).set({
+            email: email,
+            password: password
+          })
+          .then(() => {
+            alert("Account created successfully!");
+            window.location.href = "signin.html"; // الانتقال إلى صفحة تسجيل الدخول
+          });
         })
         .catch((error) => {
-          message.textContent = error.message;
-          message.className = "message error";
+          const errorCode = error.code;
+          const errorMessage = error.message;
+          document.getElementById('error').textContent = errorMessage;
         });
     });
   </script>
