--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign In</title>
   <style>
-    /* اضافة التنسيقات التي تم تحديدها من قبل */
+    /* التنسيقات */
     body {
       font-family: Arial, sans-serif;
       background: linear-gradient(to right, #00c6ff, #0072ff);
@@ -64,7 +64,7 @@
     <input type="email" id="signInEmail" placeholder="Enter Email" required>
     <input type="password" id="signInPassword" placeholder="Enter Password" required>
     <button type="submit">Sign In</button>
-    <p class="error" id="error"></p>
+    <p class="error" id="message"></p>
     <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
   </form>
 
@@ -92,17 +92,22 @@
       e.preventDefault();
       const email = document.getElementById('signInEmail').value;
       const password = document.getElementById('signInPassword').value;
+      const message = document.getElementById('message');
 
       firebase.auth().signInWithEmailAndPassword(email, password)
         .then((userCredential) => {
           const user = userCredential.user;
-          alert("Login successful!");
-          window.location.href = "home.html"; // الانتقال إلى الصفحة الرئيسية بعد تسجيل الدخول
+          if (user.emailVerified) {
+            window.location.href = "home.html"; // الانتقال إلى الصفحة الرئيسية بعد تسجيل الدخول
+          } else {
+            message.textContent = "Please verify your email before logging in.";
+            message.className = "error";
+          }
         })
         .catch((error) => {
-          const errorCode = error.code;
           const errorMessage = error.message;
-          document.getElementById('error').textContent = errorMessage;
+          message.textContent = errorMessage;
+          message.className = "error";
         });
     });
   </script>
