--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign In</title>
   <style>
-    /* التنسيقات */
     body {
       font-family: Arial, sans-serif;
       background: linear-gradient(to right, #00c6ff, #0072ff);
@@ -61,10 +60,10 @@
 <body>
   <form id="signInForm">
     <h1 style="color: white;">Sign In</h1>
-    <input type="email" id="signInEmail" placeholder="Enter Email" required>
-    <input type="password" id="signInPassword" placeholder="Enter Password" required>
+    <input type="email" id="email" placeholder="Enter Email" required>
+    <input type="password" id="password" placeholder="Enter Password" required>
     <button type="submit">Sign In</button>
-    <p class="error" id="message"></p>
+    <p class="error" id="error"></p>
     <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
   </form>
 
@@ -83,33 +82,31 @@
       appId: "1:113829270298:web:0dc3b3a84d94566e8792a3",
       measurementId: "G-YGW2QVQ32C"
     };
+    const firebaseApp = firebase.initializeApp(firebaseConfig);
 
-    const app = firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
+    // تهيئة Authentication
+    const auth = firebaseApp.auth();  // Firebase Authentication
 
     // تسجيل الدخول عبر Firebase
     document.getElementById('signInForm').addEventListener('submit', (e) => {
       e.preventDefault();
-      const email = document.getElementById('signInEmail').value;
-      const password = document.getElementById('signInPassword').value;
-      const message = document.getElementById('message');
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
 
+      // التحقق من البريد الإلكتروني وكلمة المرور في Firebase
       firebase.auth().signInWithEmailAndPassword(email, password)
         .then((userCredential) => {
           const user = userCredential.user;
-          if (user.emailVerified) {
-            window.location.href = "home.html"; // الانتقال إلى الصفحة الرئيسية بعد تسجيل الدخول
-          } else {
-            message.textContent = "Please verify your email before logging in.";
-            message.className = "error";
-          }
+          alert("Login successful!");
+          window.location.href = "home.html"; // الانتقال إلى الصفحة الرئيسية بعد تسجيل الدخول
         })
         .catch((error) => {
+          const errorCode = error.code;
           const errorMessage = error.message;
-          message.textContent = errorMessage;
-          message.className = "error";
+          document.getElementById('error').textContent = errorMessage;
         });
     });
   </script>
 </body>
 </html>
+
