--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sign In</title>
+  <title>Sign Up</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -55,16 +55,21 @@
       margin-top: 10px;
       font-weight: bold;
     }
+    .success {
+      color: green;
+      margin-top: 10px;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
-  <form id="signInForm">
-    <h1 style="color: white;">Sign In</h1>
+  <form id="signUpForm">
+    <h1 style="color: white;">Sign Up</h1>
     <input type="email" id="email" placeholder="Enter Email" required>
     <input type="password" id="password" placeholder="Enter Password" required>
-    <button type="submit">Sign In</button>
+    <button type="submit">Sign Up</button>
     <p class="error" id="error"></p>
-    <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+    <p>Already have an account? <a href="index.html">Sign In</a></p>
   </form>
 
   <!-- Firebase SDKs -->
@@ -82,30 +87,41 @@
       appId: "1:113829270298:web:0dc3b3a84d94566e8792a3",
       measurementId: "G-YGW2QVQ32C"
     };
+    const firebaseApp = firebase.initializeApp(firebaseConfig);
+    const auth = firebaseApp.auth();
 
-    const app = firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-
-    // تسجيل الدخول عبر Firebase
-    document.getElementById('signInForm').addEventListener('submit', (e) => {
+    // التسجيل عبر Firebase
+    document.getElementById('signUpForm').addEventListener('submit', (e) => {
       e.preventDefault();
       const email = document.getElementById('email').value;
       const password = document.getElementById('password').value;
 
-      firebase.auth().signInWithEmailAndPassword(email, password)
+      // التحقق من وجود البريد الإلكتروني
+      auth.createUserWithEmailAndPassword(email, password)
         .then((userCredential) => {
           const user = userCredential.user;
-          alert("Login successful!");
-          window.location.href = "home.html"; // الانتقال إلى الصفحة الرئيسية بعد تسجيل الدخول
+          
+          // إرسال رسالة التحقق عبر البريد الإلكتروني
+          user.sendEmailVerification()
+            .then(() => {
+              document.getElementById('error').textContent = '';  // إزالة أي رسالة خطأ سابقة
+              document.getElementById('error').classList.remove('error');
+              document.getElementById('error').classList.add('success');
+              document.getElementById('error').textContent = "تم إرسال رسالة التحقق إلى بريدك الإلكتروني.";
+              setTimeout(() => {
+                window.location.href = "index.html"; // الانتقال إلى صفحة تسجيل الدخول
+              }, 2000);
+            })
+            .catch((error) => {
+              console.log("Error sending verification email:", error);
+              document.getElementById('error').textContent = error.message;
+            });
         })
         .catch((error) => {
-          const errorCode = error.code;
           const errorMessage = error.message;
           document.getElementById('error').textContent = errorMessage;
-          console.log(errorCode, errorMessage);  // عرض الأخطاء في الكونسول
         });
     });
   </script>
 </body>
 </html>
-
