--- a/signup.html
+++ b/signup.html
@@ -55,6 +55,11 @@
       margin-top: 10px;
       font-weight: bold;
     }
+    .success {
+      color: green;
+      margin-top: 10px;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
@@ -70,7 +75,6 @@
   <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
 
   <script>
     // إعداد Firebase
@@ -84,9 +88,7 @@
       measurementId: "G-YGW2QVQ32C"
     };
     const firebaseApp = firebase.initializeApp(firebaseConfig);
-
-    // تهيئة Firestore و Authentication
-    const auth = firebaseApp.auth();  // Firebase Authentication
+    const auth = firebaseApp.auth();
 
     // التسجيل عبر Firebase
     document.getElementById('signUpForm').addEventListener('submit', (e) => {
@@ -94,20 +96,28 @@
       const email = document.getElementById('email').value;
       const password = document.getElementById('password').value;
 
-      // التحقق من البريد الإلكتروني وكلمة المرور في Firebase
-      firebase.auth().createUserWithEmailAndPassword(email, password)
+      // التحقق من وجود البريد الإلكتروني
+      auth.createUserWithEmailAndPassword(email, password)
         .then((userCredential) => {
           const user = userCredential.user;
-
-          // إرسال رسالة تأكيد البريد الإلكتروني
-          user.sendEmailVerification().then(() => {
-            // إخطار المستخدم بإنه تم إرسال رسالة التأكيد
-            alert("Verification email sent! Please check your inbox.");
-            window.location.href = "signin.html"; // الانتقال إلى صفحة تسجيل الدخول
-          });
+          
+          // إرسال رسالة التحقق عبر البريد الإلكتروني
+          user.sendEmailVerification()
+            .then(() => {
+              document.getElementById('error').textContent = '';  // إزالة أي رسالة خطأ سابقة
+              document.getElementById('error').classList.remove('error');
+              document.getElementById('error').classList.add('success');
+              document.getElementById('error').textContent = "تم إرسال رسالة التحقق إلى بريدك الإلكتروني.";
+              setTimeout(() => {
+                window.location.href = "index.html"; // الانتقال إلى صفحة تسجيل الدخول
+              }, 2000);
+            })
+            .catch((error) => {
+              console.log("Error sending verification email:", error);
+              document.getElementById('error').textContent = error.message;
+            });
         })
         .catch((error) => {
-          const errorCode = error.code;
           const errorMessage = error.message;
           document.getElementById('error').textContent = errorMessage;
         });
@@ -115,3 +125,5 @@
   </script>
 </body>
 </html>
+
+
