--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign In</title>
   <style>
+    /* اضافة التنسيقات التي تم تحديدها من قبل */
     body {
       font-family: Arial, sans-serif;
       background: linear-gradient(to right, #00c6ff, #0072ff);
@@ -60,8 +61,8 @@
 <body>
   <form id="signInForm">
     <h1 style="color: white;">Sign In</h1>
-    <input type="email" id="email" placeholder="Enter Email" required>
-    <input type="password" id="password" placeholder="Enter Password" required>
+    <input type="email" id="signInEmail" placeholder="Enter Email" required>
+    <input type="password" id="signInPassword" placeholder="Enter Password" required>
     <button type="submit">Sign In</button>
     <p class="error" id="error"></p>
     <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
@@ -82,26 +83,24 @@
       appId: "1:113829270298:web:0dc3b3a84d94566e8792a3",
       measurementId: "G-YGW2QVQ32C"
     };
-    const firebaseApp = firebase.initializeApp(firebaseConfig);
-    const auth = firebaseApp.auth();
+
+    const app = firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
 
     // تسجيل الدخول عبر Firebase
     document.getElementById('signInForm').addEventListener('submit', (e) => {
       e.preventDefault();
-      const email = document.getElementById('email').value;
-      const password = document.getElementById('password').value;
+      const email = document.getElementById('signInEmail').value;
+      const password = document.getElementById('signInPassword').value;
 
-      auth.signInWithEmailAndPassword(email, password)
+      firebase.auth().signInWithEmailAndPassword(email, password)
         .then((userCredential) => {
-          // تسجيل الدخول ناجح
           const user = userCredential.user;
-          if (user.emailVerified) {
-            window.location.href = "home.html"; // الانتقال إلى الصفحة الرئيسية بعد التحقق
-          } else {
-            document.getElementById('error').textContent = "Please verify your email address.";
-          }
+          alert("Login successful!");
+          window.location.href = "home.html"; // الانتقال إلى الصفحة الرئيسية بعد تسجيل الدخول
         })
         .catch((error) => {
+          const errorCode = error.code;
           const errorMessage = error.message;
           document.getElementById('error').textContent = errorMessage;
         });
