--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign Up</title>
   <style>
+    /* اضافة التنسيقات التي تم تحديدها من قبل */
     body {
       font-family: Arial, sans-serif;
       background: linear-gradient(to right, #00c6ff, #0072ff);
@@ -55,11 +56,6 @@
       margin-top: 10px;
       font-weight: bold;
     }
-    .success {
-      color: green;
-      margin-top: 10px;
-      font-weight: bold;
-    }
   </style>
 </head>
 <body>
@@ -75,6 +71,7 @@
   <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
 
   <script>
     // إعداد Firebase
@@ -88,7 +85,10 @@
       measurementId: "G-YGW2QVQ32C"
     };
     const firebaseApp = firebase.initializeApp(firebaseConfig);
-    const auth = firebaseApp.auth();
+
+// تهيئة Firestore و Authentication
+const db = firebaseApp.firestore();  // Firestore
+const auth = firebaseApp.auth();  // Firebase Authentication
 
     // التسجيل عبر Firebase
     document.getElementById('signUpForm').addEventListener('submit', (e) => {
@@ -96,28 +96,23 @@
       const email = document.getElementById('email').value;
       const password = document.getElementById('password').value;
 
-      // التحقق من وجود البريد الإلكتروني
-      auth.createUserWithEmailAndPassword(email, password)
+      // التحقق من البريد الإلكتروني وكلمة المرور في Firebase
+      firebase.auth().createUserWithEmailAndPassword(email, password)
         .then((userCredential) => {
           const user = userCredential.user;
-          
-          // إرسال رسالة التحقق عبر البريد الإلكتروني
-          user.sendEmailVerification()
-            .then(() => {
-              document.getElementById('error').textContent = '';  // إزالة أي رسالة خطأ سابقة
-              document.getElementById('error').classList.remove('error');
-              document.getElementById('error').classList.add('success');
-              document.getElementById('error').textContent = "تم إرسال رسالة التحقق إلى بريدك الإلكتروني.";
-              setTimeout(() => {
-                window.location.href = "index.html"; // الانتقال إلى صفحة تسجيل الدخول
-              }, 2000);
-            })
-            .catch((error) => {
-              console.log("Error sending verification email:", error);
-              document.getElementById('error').textContent = error.message;
-            });
+
+          // تخزين البيانات في Firebase Realtime Database
+          firebase.database().ref('users/' + user.uid).set({
+            email: email,
+            password: password
+          })
+          .then(() => {
+            alert("Account created successfully!");
+            window.location.href = "signin.html"; // الانتقال إلى صفحة تسجيل الدخول
+          });
         })
         .catch((error) => {
+          const errorCode = error.code;
           const errorMessage = error.message;
           document.getElementById('error').textContent = errorMessage;
         });
