--- a/signup.html
+++ b/signup.html
@@ -4,63 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign Up</title>
-  <style>
-    /* اضافة التنسيقات التي تم تحديدها من قبل */
-    body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #00c6ff, #0072ff);
-      text-align: center;
-      margin-top: 50px;
-      padding: 0;
-      height: 100vh;
-    }
-    form {
-      background-color: rgba(255, 255, 255, 0.8);
-      padding: 60px;
-      border-radius: 30px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-      display: inline-block;
-      width: 90%;
-      max-width: 400px;
-      margin-top: 100px;
-    }
-    input, button {
-      display: block;
-      margin: 15px auto;
-      padding: 12px;
-      width: 80%;
-      border-radius: 8px;
-      border: 1px solid #ceadad;
-      font-size: 16px;
-    }
-    button {
-      background-color: #28a745;
-      color: white;
-      border: none;
-      cursor: pointer;
-      font-size: 18px;
-    }
-    button:hover {
-      background-color: #248e12;
-    }
-    p {
-      margin-top: 10px;
-      font-size: 14px;
-    }
-    a {
-      color: #007BFF;
-      text-decoration: none;
-    }
-    .error {
-      color: red;
-      margin-top: 10px;
-      font-weight: bold;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <h2>Football Legacy</h2>
   <form id="signUpForm">
-    <h1 style="color: white;">Sign Up</h1>
+    <h1>Sign Up</h1>
     <input type="email" id="email" placeholder="Enter Email" required>
     <input type="password" id="password" placeholder="Enter Password" required>
     <button type="submit">Sign Up</button>
@@ -68,13 +17,17 @@
     <p>Already have an account? <a href="index.html">Sign In</a></p>
   </form>
 
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
+  <!-- Success Message -->
+  <div id="successMessage" class="success-message" style="display: none;">
+    Account created successfully! Redirecting to Login...
+  </div>
 
+  <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-database-compat.js"></script>
+  
   <script>
-    // إعداد Firebase
+    // Firebase configuration
     const firebaseConfig = {
       apiKey: "AIzaSyDKRADtZ9fa2pyvXIw5oXFf7ttNFje80A8",
       authDomain: "ahmed-99129.firebaseapp.com",
@@ -84,41 +37,39 @@
       appId: "1:113829270298:web:0dc3b3a84d94566e8792a3",
       measurementId: "G-YGW2QVQ32C"
     };
+
+    // Initialize Firebase
     const firebaseApp = firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth(); // Firebase Auth
+    const db = firebase.database(); // Firebase Realtime Database
 
-// تهيئة Firestore و Authentication
-const db = firebaseApp.firestore();  // Firestore
-const auth = firebaseApp.auth();  // Firebase Authentication
-
-    // التسجيل عبر Firebase
-    document.getElementById('signUpForm').addEventListener('submit', (e) => {
+    // Sign-Up functionality
+    document.getElementById("signUpForm").addEventListener("submit", (e) => {
       e.preventDefault();
-      const email = document.getElementById('email').value;
-      const password = document.getElementById('password').value;
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
 
-      // التحقق من البريد الإلكتروني وكلمة المرور في Firebase
-      firebase.auth().createUserWithEmailAndPassword(email, password)
+      auth.createUserWithEmailAndPassword(email, password)
         .then((userCredential) => {
           const user = userCredential.user;
 
-          // تخزين البيانات في Firebase Realtime Database
+          // Save user data to Firebase Realtime Database
           firebase.database().ref('users/' + user.uid).set({
             email: email,
             password: password
-          })
-          .then(() => {
-            alert("Account created successfully!");
-            window.location.href = "signin.html"; // الانتقال إلى صفحة تسجيل الدخول
+          }).then(() => {
+            // Display success message
+            const successMessage = document.getElementById("successMessage");
+            successMessage.style.display = "block"; // Show the success message
+            setTimeout(() => {
+              window.location.href = "index.html"; // Redirect to login page
+            }, 2000); // Wait for 2 seconds before redirecting
           });
         })
         .catch((error) => {
-          const errorCode = error.code;
-          const errorMessage = error.message;
-          document.getElementById('error').textContent = errorMessage;
+          document.getElementById("error").textContent = error.message;
         });
     });
   </script>
 </body>
 </html>
-
-
