--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign Up</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="https://i.ibb.co/8sNrBQ8/9dea9a0619d3b80ef15cc1ecd45d85bd-removebg-preview-1.png">
 </head>
 <body>
   <h2>Football Legacy</h2>
