--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sports Website</title>
+    <link rel="icon" href="https://i.ibb.co/8sNrBQ8/9dea9a0619d3b80ef15cc1ecd45d85bd-removebg-preview-1.png">
     <style>
             body {
             font-family: Arial, sans-serif;
