--- a/home.html
+++ b/home.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sports Website</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4405581336011742"
+     crossorigin="anonymous"></script>
     <link rel="icon" href="https://i.ibb.co/8sNrBQ8/9dea9a0619d3b80ef15cc1ecd45d85bd-removebg-preview-1.png">
     <style>
             body {
